# GMap

./: .gitignore  README.md  buildandrun.sh
.github/workflows/: build.yml  lint.yml
addon/: addon.json
addon/lua/gmodmap/server/: sv_main.lua
server/: eslint.config.js  package-lock.json  package.json
server/public/: index.html
server/public/js/: viewer.js
server/src/: bsp-parser.js  index.js  pakfile.js  state.js  texture-cache.js  vpk-reader.js  vtf-parser.js
wasm/: Cargo.toml
wasm/src/: bsp.rs  lib.rs  pakfile.rs  vpk.rs  vtf.rs
