[package]
name = "gmap-wasm"
version = "0.1.0"
edition = "2021"
rust-version = "1.75"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "=0.2.92"
serde = { version = "1", features = ["derive"] }
serde-wasm-bindgen = "=0.5.0"
js-sys = "=0.3.69"

[profile.release]
opt-level = "s"
lto = true
